tests/fail/Ownership&Type/usingARefInBinop.rs
fn main() {
    let x : i32 = 5;
    let y : i32 = 10;
    let r : &i32 = &x;
    let sum : i32 = r + y;
}